# gcp

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  AI_AGENT_GUIDELINES.md  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: ci.yml  deploy-serving.yml  deploy.yml
dbt/: dbt_project.yml  profiles.yml
dbt/models/marts/: _schema.yml  demand_features.sql
dbt/models/staging/: _sources.yml  stg_sales.sql
deployment/: deploy_pipeline.py
deployment/serving/: Dockerfile  cloudbuild.yaml  deploy_service.py
notebooks/: local_end_to_end.ipynb
scripts/: generate_arch_diagram.py  generate_data.py  trigger_from_e2_micro.sh
src/forecasting/: __init__.py  local_runner.py
src/forecasting/components/: __init__.py  data_components.py  training_components.py
src/forecasting/config/: __init__.py  settings.py
src/forecasting/data/: __init__.py  generator.py
src/forecasting/models/: __init__.py  features.py  train.py
src/forecasting/pipelines/: __init__.py  data_pipeline.py  training_pipeline.py
src/forecasting/serving/: __init__.py  app.py  predictor.py
src/forecasting/utils/: __init__.py  gcs.py  metrics.py
tests/: conftest.py
tests/integration/: test_local_run.py  test_pipeline_compile.py  test_serving_app.py
tests/unit/: test_generator.py  test_metrics.py  test_predictor.py  test_train.py
